Fix CORS preflight for Netlify